<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/assessment_finish_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/assessment_finish_label2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessment_finish_textView2" />

    <Button
        android:id="@+id/assessment_finish_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessment_finish_label3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/assessment_finish_imageView1"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="@+id/assessment_finish_imageView1"
        app:layout_constraintTop_toBottomOf="@+id/assessment_finish_imageView1"
        app:layout_constraintVertical_bias="0.156" />

    <ProgressBar
        android:id="@+id/assessment_finish_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="153dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <ImageView
        android:id="@+id/assessment_finish_imageView1"
        android:layout_width="152dp"
        android:layout_height="160dp"
        android:src="@drawable/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <ImageView
        android:id="@+id/assessment_finish_imageView2"
        android:layout_width="85dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/assessment_finish_textView2"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/assessment_finish_textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424"
        app:srcCompat="@drawable/crash" />

    <TextView
        android:id="@+id/assessment_finish_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/assessment_finish_label1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/assessment_finish_progressBar"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/assessment_finish_progressBar"
        app:layout_constraintTop_toBottomOf="@+id/assessment_finish_progressBar" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/assessment_finish_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="assessment_finish_imageView1,assessment_finish_button2" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/assessment_finish_tryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="assessment_finish_button1,assessment_finish_textView2,assessment_finish_imageView2" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/assessment_finish_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids=",assessment_finish_textView1,assessment_finish_progressBar" />


    <TextView
        android:id="@+id/assessment_finish_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/crash"
        app:layout_constraintEnd_toEndOf="@+id/assessment_finish_button1"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="@+id/assessment_finish_button1"
        app:layout_constraintTop_toBottomOf="@+id/assessment_finish_imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>
