<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yyrz.SpeechCognition.ui.assessmentUI.memory.MemoryAssessment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/assessment_delay_memory_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_test_label1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/assessment_delay_memory_guideline4"
        app:layout_constraintStart_toStartOf="@id/assessment_delay_memory_guideline7" />

    <TextView
        android:id="@+id/assessment_delay_memory_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_test_label2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/assessment_delay_memory_guideline3"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_textView1" />

    <TextView
        android:id="@+id/assessment_delay_memory_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_test_label3"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/assessment_delay_memory_guideline6"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_textView2" />

    <TextView
        android:id="@+id/assessment_delay_memory_textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_test_label4"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/assessment_delay_memory_guideline2"
        app:layout_constraintEnd_toEndOf="@+id/assessment_delay_memory_textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <TextView
        android:id="@+id/assessment_delay_memory_textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_test_label5"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/assessment_delay_memory_guideline1"
        app:layout_constraintEnd_toEndOf="@+id/assessment_delay_memory_textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <TextView
        android:id="@+id/assessment_delay_memory_textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_test_label10"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/assessment_delay_memory_guideline8"
        app:layout_constraintTop_toTopOf="@+id/assessment_delay_memory_guideline5" />

    <TextView
        android:id="@+id/assessment_delay_memory_textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_test_label8"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/assessment_delay_memory_guideline9"
        app:layout_constraintTop_toTopOf="@+id/assessment_delay_memory_guideline5" />

    <TextView
        android:id="@+id/assessment_delay_memory_textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_test_label9"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/assessment_delay_memory_guideline5" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="assessment_delay_memory_textView1,assessment_delay_memory_textView2,assessment_delay_memory_textView3,assessment_delay_memory_textView4,assessment_delay_memory_textView5"
        tools:layout_editor_absoluteX="438dp" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_textView1"
        app:layout_constraintEnd_toEndOf="@+id/assessment_delay_memory_textView6"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_textView6"
        app:layout_constraintTop_toTopOf="@+id/assessment_delay_memory_textView1" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_textView2"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox1"
        app:layout_constraintTop_toTopOf="@+id/assessment_delay_memory_textView2" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_textView3"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox2"
        app:layout_constraintTop_toTopOf="@+id/assessment_delay_memory_textView3" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_textView4"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox3"
        app:layout_constraintTop_toTopOf="@+id/assessment_delay_memory_textView4" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_textView5"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox4"
        app:layout_constraintTop_toTopOf="@+id/assessment_delay_memory_textView5" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_checkBox1"
        app:layout_constraintEnd_toEndOf="@+id/assessment_delay_memory_textView7"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_textView7"
        app:layout_constraintTop_toTopOf="@+id/assessment_delay_memory_checkBox1" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_checkBox2"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox6" />


    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_checkBox3"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox7" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_checkBox4"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox8" />


    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_checkBox5"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox9" />


    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_checkBox6"
        app:layout_constraintEnd_toEndOf="@+id/assessment_delay_memory_textView8"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_textView8"
        app:layout_constraintTop_toTopOf="@+id/assessment_delay_memory_checkBox6"
        tools:layout_editor_absoluteX="324dp" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_checkBox7"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox11"
        tools:layout_editor_absoluteY="223dp" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_checkBox9"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox14" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_checkBox8"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox12" />

    <CheckBox
        android:id="@+id/assessment_delay_memory_checkBox15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_delay_memory_checkBox10"
        app:layout_constraintStart_toStartOf="@+id/assessment_delay_memory_checkBox13" />


    <ImageButton
        android:id="@+id/assessment_delay_memory_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:src="@drawable/next"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/assessment_delay_memory_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/assessment_delay_memory_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.58"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/assessment_delay_memory_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.34"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/assessment_delay_memory_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.22"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/assessment_delay_memory_guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/assessment_delay_memory_guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.46"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/assessment_delay_memory_guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/assessment_delay_memory_guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.31"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/assessment_delay_memory_guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.51"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7323601" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>
